feat: improve desktop runtime UI with wallet and chat controls

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -22,6 +22,8 @@
           <li><button class="sidebar-btn" data-view="peers" role="tab">Peers</button></li>
           <li><button class="sidebar-btn" data-view="sessions" role="tab">Sessions</button></li>
           <li><button class="sidebar-btn" data-view="earnings" role="tab">Earnings</button></li>
+          <li><button class="sidebar-btn" data-view="wallet" role="tab">Wallet</button></li>
+          <li><button class="sidebar-btn" data-view="chat" role="tab">Chat</button></li>
           <li><button class="sidebar-btn" data-view="connection" role="tab">Connection</button></li>
           <li><button class="sidebar-btn" data-view="config" role="tab">Settings</button></li>
           <li><button class="sidebar-btn" data-view="desktop" role="tab">Desktop</button></li>
@@ -265,6 +267,142 @@
                 <div class="panel-head"><h3>By Provider</h3></div>
                 <canvas id="earningsPieChart" width="300" height="220"></canvas>
               </article>
+            </div>
+          </section>
+
+          <section id="view-wallet" class="view" role="tabpanel">
+            <div class="page-header">
+              <h2>Wallet</h2>
+              <div id="walletMeta" class="connection-badge badge-idle">Not connected</div>
+            </div>
+            <p id="walletMessage" class="message">Loading wallet info...</p>
+
+            <div class="wallet-mode-toggle">
+              <button id="walletModeNode" class="toggle-btn active" data-mode="node">Node Wallet</button>
+              <button id="walletModeExternal" class="toggle-btn" data-mode="external">External Wallet</button>
+            </div>
+
+            <div id="walletNodeSection">
+              <div class="wallet-card">
+                <div class="wallet-address-row">
+                  <div class="wallet-address-label">Wallet Address</div>
+                  <div class="wallet-address-display">
+                    <span id="walletAddress" class="mono">Not configured</span>
+                    <button id="walletCopyBtn" class="btn-icon" title="Copy address">Copy</button>
+                  </div>
+                  <div id="walletChain" class="wallet-chain">Base Sepolia</div>
+                </div>
+              </div>
+            </div>
+
+            <div id="walletExternalSection" style="display:none">
+              <div class="wallet-card">
+                <div class="wallet-address-row">
+                  <div class="wallet-address-label">WalletConnect</div>
+                  <div id="wcStatus" class="wc-status">
+                    <span id="wcStatusText">Not connected</span>
+                  </div>
+                  <div id="wcAddressRow" class="wallet-address-display" style="display:none">
+                    <span id="wcAddress" class="mono">-</span>
+                    <button id="wcCopyBtn" class="btn-icon" title="Copy address">Copy</button>
+                  </div>
+                  <div class="wc-actions">
+                    <button id="wcConnectBtn">Connect Wallet</button>
+                    <button id="wcDisconnectBtn" class="danger" style="display:none">Disconnect</button>
+                  </div>
+                  <div id="wcQrContainer" class="wc-qr-container" style="display:none">
+                    <canvas id="wcQrCanvas" width="260" height="260"></canvas>
+                    <p class="wc-qr-hint">Scan with your mobile wallet</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="stat-grid">
+              <div class="stat-card"><p class="stat-label">ETH Balance</p><p id="walletETH" class="stat-value">0.00</p></div>
+              <div class="stat-card"><p class="stat-label">USDC Balance</p><p id="walletUSDC" class="stat-value green">0.00</p></div>
+              <div class="stat-card"><p class="stat-label">Network</p><p id="walletNetwork" class="stat-value">Base</p></div>
+            </div>
+
+            <div class="panel-grid two-col">
+              <article class="panel">
+                <div class="panel-head"><h3>Escrow Balance</h3></div>
+                <div class="escrow-grid">
+                  <div class="escrow-item">
+                    <span class="escrow-label">Deposited</span>
+                    <span id="escrowDeposited" class="escrow-value green">$0.00</span>
+                  </div>
+                  <div class="escrow-item">
+                    <span class="escrow-label">Committed</span>
+                    <span id="escrowCommitted" class="escrow-value">$0.00</span>
+                  </div>
+                  <div class="escrow-item">
+                    <span class="escrow-label">Available</span>
+                    <span id="escrowAvailable" class="escrow-value">$0.00</span>
+                  </div>
+                </div>
+              </article>
+
+              <article class="panel">
+                <div class="panel-head"><h3>Deposit / Withdraw</h3></div>
+                <div class="wallet-actions">
+                  <div class="wallet-action-row">
+                    <input id="walletAmount" type="number" class="form-input" placeholder="Amount (USDC)" step="0.01" min="0" />
+                  </div>
+                  <div class="wallet-action-row">
+                    <button id="walletDepositBtn">Deposit</button>
+                    <button id="walletWithdrawBtn" class="secondary">Withdraw</button>
+                  </div>
+                  <p id="walletActionMessage" class="message"></p>
+                </div>
+              </article>
+            </div>
+          </section>
+
+          <section id="view-chat" class="view" role="tabpanel">
+            <div class="page-header">
+              <h2>AI Chat</h2>
+              <div class="page-header-right">
+                <select id="chatModelSelect" class="form-input chat-model-select">
+                  <option value="claude-sonnet-4-20250514">Claude Sonnet</option>
+                  <option value="claude-opus-4-20250514">Claude Opus</option>
+                  <option value="claude-haiku-4-20250514">Claude Haiku</option>
+                </select>
+                <div id="chatProxyStatus" class="connection-badge badge-idle">Proxy offline</div>
+              </div>
+            </div>
+
+            <div class="chat-container">
+              <aside class="chat-sidebar">
+                <div class="chat-sidebar-header">
+                  <button id="chatNewBtn" class="chat-new-btn">+ New Chat</button>
+                </div>
+                <div id="chatConversations" class="chat-conversation-list">
+                  <div class="chat-empty">No conversations yet</div>
+                </div>
+              </aside>
+
+              <div class="chat-main">
+                <div id="chatHeader" class="chat-thread-header">
+                  <span class="chat-thread-peer">AI Assistant</span>
+                  <button id="chatDeleteBtn" class="btn-icon chat-delete-btn" title="Delete conversation" style="display:none">Delete</button>
+                </div>
+                <div id="chatMessages" class="chat-messages">
+                  <div class="chat-welcome">
+                    <div class="chat-welcome-title">Leechless AI Chat</div>
+                    <div class="chat-welcome-subtitle">Send messages through the P2P marketplace to inference providers.</div>
+                    <div class="chat-welcome-subtitle">Start the Buyer runtime and create a new conversation to begin.</div>
+                  </div>
+                </div>
+                <div class="chat-input-area">
+                  <textarea id="chatInput" class="chat-text-input" placeholder="Type a message... (Shift+Enter for newline)" rows="1" disabled></textarea>
+                  <button id="chatSendBtn" disabled>Send</button>
+                  <button id="chatAbortBtn" class="chat-abort-btn" style="display:none">Stop</button>
+                </div>
+                <div id="chatStreamingIndicator" class="chat-streaming-indicator" style="display:none">
+                  <span class="chat-streaming-dot"></span> Generating response...
+                </div>
+              </div>
             </div>
           </section>
 
