complete role config and pricing v2 migration

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -37,7 +37,6 @@
           <div class="runtime-chip-wrap">
             <span class="runtime-chip" data-mode="seeder">Seller <strong id="seedBadge">Stopped</strong></span>
             <span class="runtime-chip" data-mode="connect">Buyer <strong id="connectBadge">Stopped</strong></span>
-            <span class="runtime-chip" data-mode="both">Dash <strong id="dashboardBadge">Stopped</strong></span>
           </div>
         </div>
       </aside>
@@ -74,16 +73,6 @@
                 <button id="connectStopBtn" class="danger">Stop</button>
               </div>
               <p id="connectState" class="state status-stopped">Unknown</p>
-            </article>
-
-            <article class="control-card" data-mode="both">
-              <h3>Dashboard Engine</h3>
-              <label>Port<input id="dashboardPort" type="number" value="3117" /></label>
-              <div class="row">
-                <button id="dashboardRestartBtn">Restart</button>
-                <button id="dashboardOpenBtn" class="secondary">Open UI</button>
-              </div>
-              <p id="dashboardState" class="state status-stopped">Unknown</p>
             </article>
           </div>
         </section>
@@ -198,7 +187,8 @@
                       <th class="sortable" data-sort="peerId">Peer</th>
                       <th class="sortable" data-sort="source">Source</th>
                       <th class="sortable" data-sort="providers">Providers</th>
-                      <th class="sortable" data-sort="pricePerToken">Price</th>
+                      <th class="sortable" data-sort="inputUsdPerMillion">Input $/1M</th>
+                      <th class="sortable" data-sort="outputUsdPerMillion">Output $/1M</th>
                       <th class="sortable" data-sort="capacityMsgPerHour">Capacity</th>
                       <th class="sortable" data-sort="reputation">Rep</th>
                       <th class="sortable" data-sort="location">Location</th>
@@ -206,7 +196,7 @@
                     </tr>
                   </thead>
                   <tbody id="peersBody">
-                    <tr><td colspan="8" class="empty">No peers yet.</td></tr>
+                    <tr><td colspan="9" class="empty">No peers yet.</td></tr>
                   </tbody>
                 </table>
               </div>
@@ -403,6 +393,7 @@
                   <button id="chatSendBtn" disabled>Send</button>
                   <button id="chatAbortBtn" class="chat-abort-btn" style="display:none">Stop</button>
                 </div>
+                <div id="chatError" class="chat-error" style="display:none"></div>
                 <div id="chatStreamingIndicator" class="chat-streaming-indicator" style="display:none">
                   <span class="chat-streaming-dot"></span> Generating response...
                 </div>
@@ -452,8 +443,11 @@
                   <label class="form-label">Reserve Floor (msg/hr)
                     <input id="cfgReserveFloor" type="number" class="form-input" value="0" />
                   </label>
-                  <label class="form-label">Price per Token (USD)
-                    <input id="cfgPricePerToken" type="number" class="form-input" step="0.000001" value="0" />
+                  <label class="form-label">Input Price (USD per 1M)
+                    <input id="cfgSellerInputUsdPerMillion" type="number" class="form-input" step="0.01" value="0" />
+                  </label>
+                  <label class="form-label">Output Price (USD per 1M)
+                    <input id="cfgSellerOutputUsdPerMillion" type="number" class="form-input" step="0.01" value="0" />
                   </label>
                   <label class="form-label">Max Concurrent Buyers
                     <input id="cfgMaxBuyers" type="number" class="form-input" value="1" />
@@ -467,8 +461,14 @@
                   <label class="form-label">Proxy Port
                     <input id="cfgProxyPort" type="number" class="form-input" value="8080" />
                   </label>
-                  <label class="form-label">Max Price per Token (USD)
-                    <input id="cfgMaxPrice" type="number" class="form-input" step="0.000001" value="0" />
+                  <label class="form-label">Preferred Providers (comma-separated)
+                    <input id="cfgPreferredProviders" type="text" class="form-input" value="" />
+                  </label>
+                  <label class="form-label">Max Input Price (USD per 1M)
+                    <input id="cfgBuyerMaxInputUsdPerMillion" type="number" class="form-input" step="0.01" value="0" />
+                  </label>
+                  <label class="form-label">Max Output Price (USD per 1M)
+                    <input id="cfgBuyerMaxOutputUsdPerMillion" type="number" class="form-input" step="0.01" value="0" />
                   </label>
                   <label class="form-label">Min Peer Reputation (0-100)
                     <input id="cfgMinRep" type="number" class="form-input" min="0" max="100" value="0" />
